--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod",
     "heroku-postbuild": "ng build --prod"
   },
@@ -50,8 +46,8 @@
     "typescript": "~3.2.2"
   },
   "engines": {
-    "node": ">=8.9.4",
-    "npm": ">=6.7.0"
+    "node": "8.11.1",
+    "npm": "6.0.1"
   }
 
 }
