--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod",
     "heroku-postbuild": "ng build --prod"
   },
@@ -18,10 +22,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
-    "express.js": "^1.0.0",
+    "express": "^4.16.3",
+    "typescript": "~2.7.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
